--- a/src/CMS/Bundle/ContentBundle/Resources/views/Meta/new.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Meta/new.html.twig
@@ -3,11 +3,11 @@
 {% block body -%}
     <div class="col-md-8 col-md-offset-2 col-xs-12">
         <div class="card">
-            <div class="header">Widget</div>
+            <div class="header">Menu</div>
             <div class="content">
-                {{ form_start(edit_form) }}
-                {{ form_rest(edit_form) }}
-                {{ form_end(edit_form) }}
+                {{ form_start(form) }}
+                {{ form_rest(form) }}
+                {{ form_end(form) }}
                 <div class="clearfix"></div>
             </div>
         </div>
