--- a/src/CMS/Bundle/CoreBundle/Resources/views/Widget/relatedPosts.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Widget/relatedPosts.html.twig
@@ -1,3 +1,4 @@
+{% if contents is not empty %}
 <div class="widget related-posts">
     <h5>{{ title }}</h5>
     <div class="section">
@@ -9,3 +10,4 @@
         {% endfor %}
     </div>
 </div>
+{% endif %}
