--- a/app/Resources/views/admin/base_admin.html.twig
+++ b/app/Resources/views/admin/base_admin.html.twig
@@ -97,6 +97,7 @@
                             <li><a href="{{ path('admin_menutaxonomy') }}">Menus</a></li>
                             <li><a href="{{ path('admin_users') }}">Utilisateurs</a></li>
                             <li><a href="{{ path('admin_themes') }}">Thèmes</a></li>
+                            <li><a href="{{ path('admin_widget_index') }}">Widgets</a></li>
                         </ul>
                     </div>
                 </li>
