--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/new.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/new.html.twig
@@ -15,6 +15,7 @@
                     <li>Author: {{ app.user }}</li>
                     <li>Date: {{ 'now'|date('d/m/Y H:i:s') }}</li>
                     <li>{{ form_row(form.published) }}</li>
+                    <li>{{ form_row(form.featured) }}</li>
                 </ul>
             </div>
             <div class="footer"></div>
