--- a/templates/Breezy/header.html.twig
+++ b/templates/Breezy/header.html.twig
@@ -19,12 +19,19 @@
     <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
 </head>
 <body>
-<div class="wrapper">
-<header id="header">
-    <div class="container clearfix">
-        <nav>{{ render_menu('header') }}</nav>
-        <div id="share">
-            {{ social_buttons() }}
+    <div class="wrapper">
+        <header id="header">
+            <div class="container clearfix">
+                <nav>{{ render_menu('header') }}</nav>
+                <div id="share">
+                    {{ social_buttons() }}
+                </div>
+            </div>
+        </header>
+        <div id="main-header-logo">
+            <div id="main-wrapper-logo">
+                <div class="container">
+                    <h1>Travel Cloud</h1>
+                </div>
+            </div>
         </div>
-    </div>
-</header>
