--- a/templates/Breezy/single.html.twig
+++ b/templates/Breezy/single.html.twig
@@ -1,17 +1,30 @@
 {% include "@cms/Breezy/header.html.twig" %}
 <div class="container">
-
-    <div class="section">
-        <div class="col col-12">
-            <div class="dancing pull-left">
-                {{ content.created|date(date_format) }} | dans {{ content.getCategoriesArticle(',') }} | par {{ content.author }}
+    <div id="content">
+        <article id="post-{{ content.id }}" class="article-item post post-{{ content.id }}">
+            <div class="post-featured-item">
+                <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}" alt="{{ content.thumbnail.metas['alt_1'] }}"
+                     title="{{ content.thumbnail.metas['title_1'] }}" class="img-responsive" />
             </div>
-            <div class="clearfix"></div>
-            <h1>{{ content.title }}</h1>
+            <div class="post-entry full">
+                <div class="post-header">
+                    <span class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
+                    <h1>{{ content.title }}</h1>
+                </div>
+                <div class="post-entry-text">
+                    {{ content.description|raw }}
+                    <div class="date-author">
+                        Ecrit par <span class="author">{{ content.author }}</span> le
+                    </div>
+                </div>
+            </div>
+        </article>
+    </div>
+
             {{ social_buttons() }}
             <div class="clearfix"></div>
             <div class="description">
-                {{ content.description|raw }}
+
             </div>
             {{ widget('related-posts', content.id) }}
         </div>
