--- a/src/CMS/Bundle/CoreBundle/Resources/views/Widget/socialfollow.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Widget/socialfollow.html.twig
@@ -12,7 +12,7 @@
     <a href="{{ pinterest }}" target="_blank"><i class="fa fa-pinterest"></i></a>
 {% endif %}
 {% if gplus is not null %}
-    <a href="{{ gplus }}" target="_blank"><i class="fa fa-gplus"></i></a>
+    <a href="{{ gplus }}" target="_blank"><i class="fa fa-google-plus"></i></a>
 {% endif %}
 {% if youtube is not null %}
     <a href="{{ youtube }}" target="_blank"><i class="fa fa-youtube"></i></a>
