--- a/templates/Breezy/header.html.twig
+++ b/templates/Breezy/header.html.twig
@@ -24,14 +24,14 @@
             <div class="container clearfix">
                 <nav>{{ render_menu('header') }}</nav>
                 <div id="share">
-                    {{ social_buttons() }}
+                    {{ widget('follow-me') }}
                 </div>
             </div>
         </header>
         <div id="main-header-logo">
             <div id="main-wrapper-logo">
                 <div class="container">
-                    <h1>Travel Cloud</h1>
+                    <h1><a href="{{ path('home') }}">Travel Cloud</a></h1>
                 </div>
             </div>
         </div>
