--- a/templates/Breezy/single.html.twig
+++ b/templates/Breezy/single.html.twig
@@ -14,11 +14,26 @@
                 <div class="post-entry-text">
                     {{ content.description|raw }}
                     <div class="date-author">
-                        Ecrit par <span class="author">{{ content.author }}</span> le
+                        Ecrit par <span class="author">{{ content.author }}</span> le <span class="date">{{ content.created|localizeddate('full', 'none') }}</span>
                     </div>
                 </div>
             </div>
         </article>
+        {{ widget('related-posts', content.id) }}
     </div>
+    <aside id="sidebar">
+        {{ widget('search') }}
 
+        <div class="widget widget_map">
+            <h4 class="widget-title">Localisation</h4>
+            {{ content.get('carte')|raw }}
+        </div>
+
+        <div class="widget widget_weather">
+            <h4 class="widget-title">Météo</h4>
+            {{ content.get('meteo')|raw }}
+        </div>
+
+    </aside>
+</div>
 {% include "@cms/Breezy/footer.html.twig" %}
