--- a/templates/Breezy/style.css
+++ b/templates/Breezy/style.css
@@ -53,6 +53,39 @@ table {
     border-spacing: 0;
 }
 
+button, input, select, textarea {
+    font-family: inherit;
+    font-size: 100%;
+    margin: 0;
+    -webkit-border-radius: 0;
+}
+
+button, input {
+    line-height: normal;
+}
+
+button[type="submit"], input, select, textarea {
+    border: 1px solid #e5e5e5;
+    padding: 9px;
+}
+
+button, input[type="text"], textarea {
+    -webkit-appearance: none;
+}
+
+input[type="text"], input[type="email"], textarea {
+    padding: 12px;
+    font-size: 13px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Lato", sans-serif;
+    text-rendering: optimizeLegibility;
+    margin: 40px 0 15px;
+    font-weight: 700;
+    color: #111;
+}
+
 body {
     background-color: #f6f6f6;
     font-family: "Lato", sans-serif;
@@ -75,6 +108,10 @@ a {
 
 a:hover {
     color: #2C2C2C;
+}
+
+p {
+    line-height: 1.8;
 }
 
 img.img-responsive {
@@ -229,6 +266,11 @@ header#header #share a:hover {
 
 #main-wrapper-logo h1 {
     font-size: 60px;
+    font-family: 'Amatic SC', cursive;
+}
+
+#main-wrapper-logo h1 a {
+    color: #1C193C;
 }
 
 /*****************
@@ -363,6 +405,10 @@ header#header #share a:hover {
 
 #main-container .container {
     position: relative;
+}
+
+#main-container #content {
+    width: 100%;
 }
 
 .grid-layout {
@@ -513,6 +559,229 @@ header#header #share a:hover {
 #content {
     width: 800px;
     float: left;
+}
+
+.single .post.article-item {
+    border-bottom: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    background-color: #FFFFFF;
+}
+
+.post.article-item {
+    position: relative;
+    margin-bottom: 40px;
+    box-shadow: 0px 1px 5px rgba(0,0,0,0.05);
+    -moz-box-shadow: 0px 1px 5px rgba(0,0,0,0.05);
+    -webkit-box-shadow: 0px 1px 5px rgba(0,0,0,0.05);
+}
+
+.single .post-header {
+    margin-top: 0;
+}
+.post-header {
+    margin-bottom: 35px;
+    text-align: center;
+}
+
+.post-header .cat {
+    display: inline-block;
+    margin-bottom: 10px;
+    font-size: 12px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.single .post-header h1 a, .single .post-header h1, .page .post-header h1 a, .page .post-header h1 {
+    font-size: 35px;
+}
+.post-header h1 a, .post-header h2 a, .post-header h1, .post-header h2 {
+    font-size: 35px;
+    color: #111;
+    letter-spacing: -0.05em;
+    line-height: 1em;
+    margin: 0 auto;
+    display: block;
+    -o-transition: .3s;
+    -ms-transition: .3s;
+    -moz-transition: .3s;
+    -webkit-transition: .3s;
+    transition: .3s;
+}
+
+.post-header h1, .post-header h2 {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.post-header h1:after, .post-header h2:after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 1px;
+    margin: 10px auto 0;
+    background: #ed364d;
+}
+
+/*********************
+ * Sidebar
+ *********************/
+#sidebar {
+    float: right;
+    width: 350px;
+}
+
+.widget {
+    padding: 30px 30px;
+    position: relative;
+    margin-bottom: 30px;
+    background-color: #fff;
+    box-shadow: 0px 1px 5px rgba(0,0,0,0.05);
+    -moz-box-shadow: 0px 1px 5px rgba(0,0,0,0.05);
+    -webkit-box-shadow: 0px 1px 5px rgba(0,0,0,0.05);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+.widget-title {
+    position: relative;
+    margin-top: 0;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: bold;
+    color: #1B193B;
+}
+
+.widget-title {
+    text-align: center;
+    border-bottom: 1px solid #AAAAAA;
+    padding-bottom: 10px;
+    position: relative;
+}
+
+.widget-title:after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #AAAAAA;
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+}
+
+.widget #searchform input#q {
+    border: 1px solid #e5e5e5;
+    background: #fff url(assets/images/searchsubmit.jpg) no-repeat 96% 13px;
+    padding: 14px 14px;
+    font-size: 11px;
+    color: #333;
+    letter-spacing: 1px;
+}
+
+.widget #searchform input#q {
+    width: 100%;
+}
+
+#map {
+    width: 100%;
+    height: 290px;
+}
+
+.weather {
+    text-align: center;
+}
+
+/*********************
+ * Widgets
+ *********************/
+.related-posts {
+    margin-top: 40px;
+    padding: 40px 0;
+    overflow: hidden;
+}
+
+.box-title-area .title {
+    font-size: 15px;
+    margin: 0 0 15px;
+    padding-bottom: 6px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-align: center;
+}
+
+.box-title-area .title:after {
+    content: "";
+    display: block;
+    width: 25px;
+    height: 1px;
+    margin: 13px auto 0;
+    background: #ED364D;
+}
+
+.related-posts .item {
+    width: 30%;
+    display: inline-block;
+    margin-right: 3.5%;
+    text-align: center;
+    vertical-align: top;
+    overflow: hidden;
+}
+
+.related-posts .item:nth-child(3n) {
+    margin-right:0;
+}
+
+
+
+.related-posts .item img {
+    margin-bottom: 6px;
+    width: 100%;
+    height: auto;
+}
+
+.related-post-image img {
+    display: block;
+    width: 100%;
+    height: auto;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+}
+
+.related-post-image:hover img {
+    -webkit-transform:scale(1.2); /* Safari and Chrome */
+    -moz-transform:scale(1.2); /* Firefox */
+    -ms-transform:scale(1.2); /* IE 9 */
+    -o-transform:scale(1.2); /* Opera */
+    transform:scale(1.2);
+}
+
+.related-posts .item h3 {
+    font-size: 16px;
+    line-height: 1.4;
+    margin: 5px auto 0;
+}
+
+.related-posts .item h3 a {
+    color: #111;
+}
+
+.related-posts .item h3 a:hover {
+    color: #ED364D;
+}
+
+.related-posts .item span.date {
+    font-size: 12px;
+    font-style: italic;
+    color: #AAA;
+    display: block;
+    margin-top: 3px;
 }
 
 
