--- a/src/CMS/Bundle/ContentBundle/Resources/views/Fields/map.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Fields/map.html.twig
@@ -10,7 +10,8 @@ function initMap() {
     geocoder = new google.maps.Geocoder();
     map = new google.maps.Map(document.getElementById('map'), {
         center: {lat: lat, lng: lng},
-        zoom: 13
+        zoom: 13,
+        styles: styleArray
     });
 
     var marker = new google.maps.Marker({
