--- a/src/CMS/Bundle/ContentBundle/Resources/views/Fields/weather.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Fields/weather.html.twig
@@ -1,5 +1,5 @@
 {% if value is defined and value.ville is defined %}
-<div class="weather"></div>
+<div class="weather"><canvas id="weather-icon"></canvas></div>
 {% block javascripts %}
 <script type="text/javascript">
     $(document).ready(function () {
@@ -8,9 +8,13 @@
             url: Routing.generate("weather_ajax", {'city': ville}),
             dataType: 'json',
             success: function(data) {
-                var result = data.query.results.channel.item.condition;
-                var celsius = Math.ceil(fahrenheitToCelsius(result.temp));
-                $('.weather').html('<img src="/bundles/content/img/simple_weather_icon_'+result.code+'.png" width="64"><br />'+celsius+'°C '+result.text);
+
+//                var result = data.query.results.channel.item.condition;
+                var celsius = Math.ceil(fahrenheitToCelsius(data.currently.temperature));
+                var icon = new Skycons();
+                $('.weather').append('<br />'+celsius+'°C '+data.currently.summary);
+                icon.add(document.getElementById("weather-icon"), data.currently.icon);
+                icon.play();
             }
         });
     });
