--- a/web/templates/Breezy/footer.html.twig
+++ b/web/templates/Breezy/footer.html.twig
@@ -11,5 +11,6 @@
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/swiper.jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/masonry.pkgd.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/app.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/skycons.js') }}"></script>
 </body>
 </html>
