--- a/src/CMS/Bundle/ContentBundle/Resources/views/Fields/gallery.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Fields/gallery.html.twig
@@ -4,7 +4,7 @@
         {% set title = "title_" ~ defaultLanguage.id %}
         <div class="col-6">
             <a href="javascript:" data-target="modal-gallery" data-toggle="modal"
-               data-url="{{ asset(medium.webPath) }}">
+               data-url="{{ asset(medium.webPath) }}" rel="gallery">
                 <img src="{{ asset(medium.webPathList) }}" alt="{{ medium.metas[alt] }}"
                      title="{{ medium.metas[title] }}" class="img-responsive"/>
             </a>
@@ -15,8 +15,10 @@
         <!-- The Close Button -->
         <span class="close">&times;</span>
 
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content">
+        <div class="modal-inner">
+            <!-- Modal Content (The Image) -->
+            <img class="modal-content">
+        </div>
 
         <!-- Modal Caption (Image Text) -->
         <div id="caption"></div>
