--- a/src/CMS/Bundle/CoreBundle/Resources/views/Twig/social.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Twig/social.html.twig
@@ -1,8 +1,8 @@
 {% if url is defined %}
     <div class="social">
-        <a href="https://facebook.com/sharer/sharer.php?u={{ url }}" target="_blank" rel="noopener"><i class="fa fa-facebook"></i></a>
-        <a href=https://twitter.com/intent/tweet/?url={{ url }}" target="_blank" rel="noopener"><i class="fa fa-twitter"></i></a>
-        <a href="https://pinteret.com/pin/create/button/?url={{ url }}" target="_blank" rel="noopener"><i class="fa fa-pinterest"></i></a>
+        <a href="https://facebook.com/sharer/sharer.php?u={{ url }}" target="_blank" rel="noopener" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/intent/tweet/?url={{ url }}" target="_blank" rel="noopener" class="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="https://pinteret.com/pin/create/button/?url={{ url }}" target="_blank" rel="noopener" class="pinterest"><i class="fa fa-pinterest"></i></a>
         <div class="clearfix"></div>
     </div>
 {% endif %}
