--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -10,6 +10,7 @@
     </div>
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/swiper.jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/masonry.pkgd.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/component.js') }}"></script>
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/app.js') }}"></script>
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/skycons.js') }}"></script>
 </body>
