--- a/templates/Breezy/style.css
+++ b/templates/Breezy/style.css
@@ -89,7 +89,7 @@ h1, h2, h3, h4, h5, h6 {
 body {
     background-color: #f6f6f6;
     font-family: "Lato", sans-serif;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 *, ::before, ::after {
@@ -127,9 +127,23 @@ h2 {
 }
 
 .container {
-    width: 1180px;
+    width: 950px;
     margin: 0 auto;
 }
+
+@media only screen and (min-width: 1240px) {
+    .container {
+        width: 1180px;
+    }
+}
+
+@media only screen and (max-width: 1023px) {
+    .container {
+        width: 84%;
+        max-width: 630px;
+    }
+}
+
 
 .clearfix:before,.clearfix:after,.container:before,.container:after,.container-fluid:before,.container-fluid:after,.row:before,.row:after{content:" ";display:table}
 .clearfix:after,.container:after,.container-fluid:after,.row:after{clear:both}
@@ -166,6 +180,15 @@ header#header nav {
     float: left;
 }
 
+header#header nav ul li {
+    text-transform: uppercase;
+}
+
+header#header nav ul li a {
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
 header#header nav > ul {
     padding: 0;
     margin: 0;
@@ -177,6 +200,14 @@ header#header nav > ul > li {
     position: relative;
     float: left;
     padding: 0 30px 0 0;
+}
+
+#header nav > ul > li.menu-parent a:after {
+    content: "\f107";
+    font-family: "FontAwesome";
+    display: inline-block;
+    margin-left: 4px;
+    font-size: 11px;
 }
 
 header#header nav > ul > li ul.menu-items-children {
@@ -231,6 +262,43 @@ header#header nav > ul li a:hover {
     color: #6d6d6d;
 }
 
+.slicknav_menu {
+    text-align: left;
+    display:none;
+    padding:0;
+}
+
+@media only screen and (max-width: 1023px) {
+    .slicknav_menu {
+        display: block;
+        font-family: "Montserrat", serif;
+    }
+}
+
+.slicknav_btn {
+    height: 57px;
+    line-height: 57px;
+    padding:0;
+    margin:0 5px;
+}
+
+.main-navigation {
+    display: inline-block;
+    float: left;
+    height: 57px;
+}
+
+@media only screen and (max-width: 1023px) {
+    .main-navigation {
+        display: none;
+    }
+}
+
+.menu-mobile {
+    display: inline-block;
+    float: left;
+}
+
 header#header #share {
     display: inline-block;
     float: right;
@@ -252,6 +320,93 @@ header#header #share a:hover {
     color: #ed364d;
 }
 
+.top-search-area {
+    display: inline-block;
+    float: right;
+    text-align: center;
+    line-height: 57px;
+}
+
+.top-search-area a {
+    color: #000000;
+}
+
+.top-search-area a i {
+    background: #000000;
+    color: #ffffff;
+    border-radius: 100%;
+    padding: 9px 10px;
+}
+
+.search-form-area {
+    position: fixed;
+    left: 0;
+    top: 0;
+    visibility: hidden;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    display: table;
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+body.search-open .search-form-area {
+    visibility: visible;
+    opacity: 1;
+}
+
+.search-form-area .search-form {
+    display: table-cell;
+    vertical-align: middle;
+}
+.search-form {
+    position: relative;
+}
+
+
+.search-form-area .search-form .search {
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    font-size: 28px;
+    font-weight: 300;
+    text-align: center;
+    background: #fff;
+    color: #222;
+    border: none;
+    padding: 0 17px;
+    border: none;
+    outline: none;
+}
+
+.search-form-area .search-form .search:focus {
+    outline: none;
+}
+
+
+
+
+.search-form-area .search-form .search-submit {
+    display: none;
+    right: 8px;
+}
+
+.search-form-area .close-btn {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    font-size: 25px;
+    color: #222;
+}
+
+
+/*********************
+ * Logo
+ *********************/
+
 #main-header-logo {
     position: relative;
     padding-top: 60px;
@@ -272,6 +427,8 @@ header#header #share a:hover {
 #main-wrapper-logo h1 a {
     color: #1C193C;
 }
+
+
 
 /*****************
  * Slider
@@ -437,6 +594,20 @@ header#header #share a:hover {
     -webkit-box-shadow: 0px 1px 5px rgba(0,0,0,0.05);
 }
 
+@media only screen and (max-width: 1023px) {
+    .grid-layout .post-item {
+        width: 50%!important;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .grid-layout .post-item {
+        width: 100% !important;
+    }
+}
+
+
+
 .post-featured-item {
     position: relative;
     background-color: #fff;
@@ -522,6 +693,7 @@ header#header #share a:hover {
 }
 .post-entry p {
     margin-bottom: 20px;
+    margin-top: 1em;
 }
 
 .goto-top.on {
@@ -559,6 +731,13 @@ header#header #share a:hover {
 #content {
     width: 800px;
     float: left;
+}
+
+@media only screen and (max-width: 1023px) {
+    #content {
+        width: 100%;
+        float: none !important;
+    }
 }
 
 .single .post.article-item {
@@ -621,6 +800,27 @@ header#header #share a:hover {
     height: 1px;
     margin: 10px auto 0;
     background: #ed364d;
+}
+
+.masonry-item-footer {
+    margin-top: 20px;
+    padding-top: 17px;
+    border-top: 1px solid #e5e5e5;
+}
+
+.sub-meta-container {
+    width: 70%;
+    float: left;
+    position: relative;
+    top: 2px;
+    font-size: 10px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.comment-like-container {
+    float: right;
+    position: relative;
 }
 
 /*********************
@@ -708,6 +908,16 @@ header#header #share a:hover {
 
 .weather {
     text-align: center;
+}
+
+.comment-like-container .social a {
+    border-radius: 50%;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    color: #aaa;
+    text-align: center;
+    line-height: 20px;
 }
 
 /*********************
