--- a/web/templates/Breezy/home.html.twig
+++ b/web/templates/Breezy/home.html.twig
@@ -52,6 +52,9 @@
                                     <p>{{ content.chapo }}</p>
                                     <div class="masonry-item-footer clearfix">
                                         <div class="sub-meta-container"><span class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span></div>
+                                        <div class="comment-like-container">
+                                            {{ social_buttons(tiny_url) }}
+                                        </div>
                                     </div>
                                 </div>
                             </div>
