menu admin, traduction et creation du yml

--- a/src/CMS/Bundle/CoreBundle/Resources/views/Widget/search.html.twig
+++ b/src/CMS/Bundle/CoreBundle/Resources/views/Widget/search.html.twig
@@ -14,7 +14,7 @@
     <div class="search-form-area">
         <form role="search" method="get" class="search-form" action="{{ path('front_search') }}">
             <div>
-                <input type="text" placeholder="Rechercher..." name="s" class="search">
+                <input type="text" placeholder="Rechercher..." name="q" class="search">
                 <button type="submit" class="search-submit"><i class="fa fa-search"></i></button>
             </div>
         </form>
