--- a/web/templates/Breezy/home.html.twig
+++ b/web/templates/Breezy/home.html.twig
@@ -42,7 +42,7 @@
                             <div class="post-featured-item">
                                 <a href="{{ path('front_single', {'alias': content.url}) }}">
                                     <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_list') }}" alt="{{ content.thumbnail.metas['alt_1'] }}"
-                                         title="{{ content.thumbnail.metas['title_1'] }}">
+                                         title="{{ content.thumbnail.metas['title_1'] }}" width="363px" height="317px">
                                 </a>
                             </div>
                             <div class="item-content">
