--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/index.html.twig
@@ -51,16 +51,16 @@
             </div>
         </div>
     </div>
-    <div class="content">
+    <div class="content bootstrap-table clearfix">
          <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table">
             <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>{{ 'cms.content.title'|trans }}</th>
+                    <th{% if entities.isSorted('c.id') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'Id', 'c.id') }}</th>
+                    <th{% if entities.isSorted('c.title') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'cms.content.title'|trans, 'c.title')|raw }}</th>
                     <th>{{ 'cms.content.categories'|trans }}</th>
                     <th>{% for language in languages %}<img src="{{ asset('bundles/core/images/flags/' ~ language.codelang ~ '.png') }}" />&nbsp;{% endfor %}</th>
                     <th>{{ 'cms.content.author'|trans }}</th>
-                    <th>{{ 'cms.content.status'|trans }}</th>
+                    <th{% if entities.isSorted('c.published') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(entities, 'cms.content.status'|trans, 'c.published') }}</th>
                     <th>{{ 'cms.content.date'|trans }}</th>
                     <th class="no-sort text-right">{{ 'cms.content.actions'|trans }}</th>
                 </tr>
@@ -103,8 +103,13 @@
             {% endfor %}
             </tbody>
         </table>
+        <div class="fixed-table-pagination">
+            <div class="pull-right pagination">
+                {{ knp_pagination_render(entities) }}
+            </div>
+        </div>
     </div>
-    </div>
+</div>
 
     <div class="modal fade" id="modal-delete" aria-labelledby="simpleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
