--- a/src/CMS/Bundle/MenuBundle/Resources/views/Twig/menu.html.twig
+++ b/src/CMS/Bundle/MenuBundle/Resources/views/Twig/menu.html.twig
@@ -17,7 +17,10 @@
                 <li class="menu-item lvl-{{ entry.lvl }}{% if entry.hasChildren() %} menu-parent{% endif %}">
                 {% if entry.url is not null %}
                     <a href="{{ path('front_single', {'alias': entry.url.url}) }}"{% if entry.url.external %}
-                        target="_blank" rel="noopener"{% endif %}>{{ entry.title }}</a>
+                        target="_blank" rel="noopener"{% endif %} title="{{ entry.title }}">
+                        {% if entry.iconClass != '' %}<i class="fa {{ entry.iconClass }}"></i>{% endif %}
+                        {{ entry.title }}
+                    </a>
                 {% else %}
                     <a href="{{ path('home') }}">{{ entry.title }}</a>
                 {% endif %}
