--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -3841,29 +3841,29 @@ button.close {
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     font-weight: 300;
-    margin: 30px 0 15px;
+    margin: 0 0 15px;
 }
 
 h1, .h1 {
-    font-size: 52px;
+    font-size: 30px;
 }
 
 h2, .h2 {
-    font-size: 36px;
+    font-size: 25px;
 }
 
 h3, .h3 {
-    font-size: 28px;
-    margin: 20px 0 10px;
+    font-size: 20px;
+    margin: 0 0 10px;
 }
 
 h4, .h4 {
-    font-size: 22px;
+    font-size: 18px;
     line-height: 30px;
 }
 
 h5, .h5 {
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 15px;
 }
 
