--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -13,5 +13,6 @@
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/component.js') }}"></script>
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/app.js') }}"></script>
     <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/skycons.js') }}"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
 </body>
 </html>
