--- a/src/CMS/Bundle/ContentBundle/Resources/views/Content/new.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Content/new.html.twig
@@ -66,3 +66,6 @@
     {{ form_end(form) }}
 
 {% endblock %}
+{% block javascript %}
+    <script type="text/javascript" src="{{ asset('/bundles/content/js/content.js') }}"></script>
+{% endblock javascript %}
