--- a/src/CMS/Bundle/ContentBundle/Resources/views/Meta/index.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Meta/index.html.twig
@@ -21,12 +21,10 @@
             </div>
         </div>
         <div class="content">
-
-            <table id="data_table" class="table table-striped table-hover" role="grid" aria-describedby="data_table">
+            <table id="data_table" class="table table-striped table-hover sortable" role="grid" aria-describedby="data_table">
                 <thead>
                 <tr>
                     <th>Id</th>
-                    <th>Type</th>
                     <th>Name</th>
                     <th>Value</th>
                     <th>Published</th>
@@ -36,9 +34,8 @@
                 </thead>
                 <tbody>
                 {% for metum in metas %}
-                    <tr>
+                    <tr class="sortable-handle" data-id="{{ metum.id }}">
                         <td>{{ metum.id }}</td>
-                        <td>{{ metum.type }}</td>
                         <td>{{ metum.name }}</td>
                         <td>{{ metum.value }}</td>
                         <td>{% if metum.published %}Yes{% else %}No{% endif %}</td>
@@ -61,4 +58,10 @@
             </table>
         </div>
     </div>
+    <form action="{{ path('admin_meta_order') }}" method="post" id="form-order">
+        <input type="hidden" name="order" />
+    </form>
 {% endblock %}
+{% block javascript %}
+    <script type="text/javascript" src="{{ asset('/bundles/content/js/content.js') }}"></script>
+{% endblock javascript %}
