--- a/web/templates/Breezy/home.html.twig
+++ b/web/templates/Breezy/home.html.twig
@@ -40,10 +40,12 @@
                     <article class="post-item article-item">
                         <div id="post" class="post item">
                             <div class="post-featured-item">
+                                {% if content.thumbnail is not null %}
                                 <a href="{{ path('front_single', {'alias': content.url}) }}">
                                     <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_list') }}" alt="{{ content.thumbnail.metas['alt_1'] }}"
-                                         title="{{ content.thumbnail.metas['title_1'] }}" width="363px" height="317px">
+                                         title="{{ content.thumbnail.metas['title_1'] }}">
                                 </a>
+                                {% endif %}
                             </div>
                             <div class="item-content">
                                 <div class="post-entry">
