--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -1,18 +1,38 @@
-        {{ widget('instagram') }}
-        <div class="clearfix"></div>
-        <footer>
-            <div class="logo"><h3>TravelCloud</h3></div>
-            {{ widget('follow-me') }}
-            <p>&copy; choup Theme • From France with love • leoncorono@gmail.com • Tel: 6-123-456</p>
-            <p>Copyright &copy; 2016 Choup, INC</p>
-        </footer>
-        <a href="#" class="goto-top"><i class="fa fa-angle-up"></i></a>
+</div>
+</main>
+
+{# widget('instagram') #}
+<div class="clearfix"></div>
+<footer>
+    <div class="logo"><h3>TravelCloud</h3></div>
+    {{ widget('follow-me') }}
+    <p>&copy; choup Theme • From France with love • leoncorono@gmail.com • Tel: 6-123-456</p>
+    <p>Copyright &copy; 2016 Choup, INC</p>
+</footer>
+<a href="#" class="goto-top"><i class="fa fa-angle-up"></i></a>
+</div>
+<script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/swiper.jquery.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/masonry.pkgd.min.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/component.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/app.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/skycons.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/transition.js') }}"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
+<div class="flex-container hide">
+    <div class="unit">
+        <div class="heart">
+            <div class="heart-piece-0"></div>
+            <div class="heart-piece-1"></div>
+            <div class="heart-piece-2"></div>
+            <div class="heart-piece-3"></div>
+            <div class="heart-piece-4"></div>
+            <div class="heart-piece-5"></div>
+            <div class="heart-piece-6"></div>
+            <div class="heart-piece-7"></div>
+            <div class="heart-piece-8"></div>
+        </div>
+        <p>Choupe et Doune</p>
     </div>
-    <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/swiper.jquery.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/masonry.pkgd.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/component.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/app.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/skycons.js') }}"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
+</div>
 </body>
 </html>
