--- a/templates/Breezy/home.html.twig
+++ b/templates/Breezy/home.html.twig
@@ -1,72 +1,81 @@
 {% include "@cms/Breezy/header.html.twig" %}
-<div class="featured-area" data-slider-type="slider" data-slider-transition="fade" data-slider-autoplay-enabled="1">
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            {% for article in featured %}
-            <div class="swiper-slide" style="background-image:url({{ article.thumbnail.webPath }})">
-                <div class="slider-item">
-                    <div class="container">
-                        <div class="vertical-middle">
-                            <div class="vertical-middle-inner">
-                                <div class="item-header-wrapper">
+
+    <div class="featured-area" data-slider-type="slider" data-slider-transition="fade" data-slider-autoplay-enabled="1">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                {% for article in featured %}
+                    <div class="swiper-slide" style="background-image:url({{ article.thumbnail.webPath }})">
+                        <div class="slider-item">
+                            <div class="container">
+                                <div class="vertical-middle">
+                                    <div class="vertical-middle-inner">
+                                        <div class="item-header-wrapper">
                                     <span class="cat item-postit">
                                         {{ article.getCategoriesArticle(',', true)|raw }}
                                     </span>
-                                    <h2><a href="{{ path('front_single', {'alias': article.url}) }}" class="link-article">{{ article.title }}</a></h2>
-                                    <span class="date-author">
-                                        <span class="author">{{  article.author }}</span>
+                                            <h2><a href="{{ path('front_single', {'alias': article.url}) }}"
+                                                   class="link-article">{{ article.title }}</a></h2>
+                                            <span class="date-author">
+                                        <span class="author">{{ article.author }}</span>
                                         <span class="seperator">-</span>
                                         <span class="date">{{ article.created|date(date_format) }}</span>
                                     </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        <div class="swiper-button-next swiper-button-white"></div>
-        <div class="swiper-button-prev swiper-button-white"></div>
-        <div class="swiper-pagination"></div>
-    </div>
-</div>
-<div id="main-container">
-    <div class="container">
-        <div id="content">
-            <div class="post-list grid">
-                <div class="grid-layout">
-                    {% for content in contents %}
-                    <article class="post-item article-item">
-                        <div id="post" class="post item">
-                            <div class="post-featured-item">
-                                {% if content.thumbnail is not null %}
-                                <a href="{{ path('front_single', {'alias': content.url}) }}">
-                                    <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_list') }}" alt="{{ content.thumbnail.metas['alt_1'] }}"
-                                         title="{{ content.thumbnail.metas['title_1'] }}">
-                                </a>
-                                {% endif %}
-                            </div>
-                            <div class="item-content">
-                                <div class="post-entry">
-                                    <h2><a href="{{ path('front_single', {'alias': content.url}) }}">{{ content.title }}</a></h2>
-                                    <div class="date-author"><span class="date">{{ content.created|date(date_format) }}</span></div>
-                                    <p>{{ content.chapo }}</p>
-                                    <div class="masonry-item-footer clearfix">
-                                        <div class="sub-meta-container"><span class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span></div>
-                                        <div class="comment-like-container">
-                                            {{ social_buttons(tiny_url) }}
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </article>
-                    {% endfor %}
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="swiper-button-next swiper-button-white"></div>
+            <div class="swiper-button-prev swiper-button-white"></div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </div>
+    <div id="main-container">
+        <div class="container">
+            <div id="content">
+                <div class="post-list grid">
+                    <div class="grid-layout">
+                        {% for content in contents %}
+                            <article class="post-item article-item">
+                                <div id="post" class="post item">
+                                    <div class="post-featured-item">
+                                        {% if content.thumbnail is not null %}
+                                            <a href="{{ path('front_single', {'alias': content.url}) }}">
+                                                <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_list') }}"
+                                                     alt="{{ content.thumbnail.metas['alt_1'] }}"
+                                                     title="{{ content.thumbnail.metas['title_1'] }}">
+                                            </a>
+                                        {% endif %}
+                                    </div>
+                                    <div class="item-content">
+                                        <div class="post-entry">
+                                            <h2>
+                                                <a href="{{ path('front_single', {'alias': content.url}) }}">{{ content.title }}</a>
+                                            </h2>
+                                            <div class="date-author"><span
+                                                        class="date">{{ content.created|date(date_format) }}</span>
+                                            </div>
+                                            <p>{{ content.chapo }}</p>
+                                            <div class="masonry-item-footer clearfix">
+                                                <div class="sub-meta-container"><span
+                                                            class="cat">{{ content.getCategoriesArticle(',', true)|raw }}</span>
+                                                </div>
+                                                <div class="comment-like-container">
+                                                    {{ social_buttons(tiny_url) }}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
+</main>
 {% include "@cms/Breezy/footer.html.twig" %}
