--- a/web/templates/Breezy/single.html.twig
+++ b/web/templates/Breezy/single.html.twig
@@ -3,8 +3,11 @@
     <div id="content">
         <article id="post-{{ content.id }}" class="article-item post post-{{ content.id }}">
             <div class="post-featured-item">
-                <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}" alt="{{ content.thumbnail.metas['alt_1'] }}"
-                     title="{{ content.thumbnail.metas['title_1'] }}" class="img-responsive" />
+                {% if content.thumbnail is not null %}
+                <img src="{{ content.thumbnail.getWebPath()|imagine_filter('thumb_post') }}"
+                     alt="{{ content.thumbnail.metas['alt_1'] }}"
+                     title="{{ content.thumbnail.metas['title_1'] }}" class="img-responsive"/>
+                {% endif %}
                 <div class="blurred"></div>
             </div>
             <div class="post-entry full">
@@ -15,7 +18,8 @@
                 <div class="post-entry-text">
                     {{ content.description|raw }}
                     <div class="date-author">
-                        Ecrit par <span class="author">{{ content.author }}</span> le <span class="date">{{ content.created|localizeddate('full', 'none') }}</span>
+                        Ecrit par <span class="author">{{ content.author }}</span> le <span
+                                class="date">{{ content.created|localizeddate('full', 'none') }}</span>
                     </div>
                 </div>
             </div>
