--- a/src/CMS/Bundle/ContentBundle/Resources/views/Fields/kml.html.twig
+++ b/src/CMS/Bundle/ContentBundle/Resources/views/Fields/kml.html.twig
@@ -7,6 +7,7 @@
     <canvas id="profil"></canvas>
 </div>
 {% if value.data is defined and value.data %}
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwy2LBbH0VPoPB3lpb8qqqJhADEZZCYs4&callback=initMap"></script>
 <script>
     var map;
     function initMap() {
@@ -14,6 +15,7 @@
         map = new google.maps.Map(document.getElementById('map'), {
             zoom: 13
         });
+        console.log(map);
         var curLatLong = "";
         var prevLatLong = new google.maps.LatLng({{ value.data.0.latitude }}, {{ value.data.0.longitude }});
         var bounds = new google.maps.LatLngBounds();
