--- a/templates/Breezy/footer.html.twig
+++ b/templates/Breezy/footer.html.twig
@@ -1,7 +1,7 @@
 </div>
 </main>
 
-{# widget('instagram') #}
+{{ widget('instagram') }}
 <div class="clearfix"></div>
 <footer>
     <div class="logo"><h3>TravelCloud</h3></div>
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/component.js') }}"></script>
 <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/app.js') }}"></script>
 <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/skycons.js') }}"></script>
+<script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/barba.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('/templates/' ~ theme ~ '/assets/js/transition.js') }}"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
 <div class="flex-container hide">
